# byzanz-mate

./: .gitignore  README  autogen.sh  byzanz_0.2.2+git22.10.2011.orig.tar.gz.delta  byzanz_0.2.2+git22.10.2011.orig.tar.gz.id  byzanz_0.3.0+git20120930.orig.tar.gz.delta  byzanz_0.3.0+git20120930.orig.tar.gz.id  byzanz_0.3.0+git20130319.orig.tar.xz.delta  byzanz_0.3.0+git20130319.orig.tar.xz.id  byzanz_0.3.0+git20140107.orig.tar.xz.delta  byzanz_0.3.0+git20140107.orig.tar.xz.id  byzanz_0.3.0+git20140115.orig.tar.xz.delta  byzanz_0.3.0+git20140123.orig.tar.xz.delta  byzanz_0.3.0+git20140123.orig.tar.xz.id  byzanz_0.3.0+git20140223.orig.tar.xz.delta  byzanz_0.3.0+git20140223.orig.tar.xz.id  byzanz_0.3.0+git20140619.orig.tar.xz.delta  byzanz_0.3.0+git20140619.orig.tar.xz.id  byzanz_0.3.0+git20150701.orig.tar.xz.delta  byzanz_0.3.0+git20150701.orig.tar.xz.id  byzanz_0.3.0+git20151213.orig.tar.xz.delta  byzanz_0.3.0+git20151213.orig.tar.xz.id  byzanz_0.3.0+git20160107.orig.tar.xz.delta  byzanz_0.3.0+git20160107.orig.tar.xz.id  byzanz_0.3.0+git20160312.orig.tar.xz.delta  byzanz_0.3.0+git20160312.orig.tar.xz.id  configure.ac
debian/: changelog  control  copyright
debian/patches/: remove-deprecated-gnome-common-macros.patch
debian/upstream/: metadata
po/: POTFILES.in  bs.po  ca.po  cs.po  da.po  de.po  el.po  es.po  fi.po  gl.po  hu.po  id.po  lv.po  nb.po  pl.po  pt.po  pt_BR.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po
src/: Makefile.am  byzanzapplet.c  org.mate.byzanz.applet.gschema.xml.in.in  org.mate.panel.applet.ByzanzAppletFactory.service.in  playback.c  record.c
